force-app/main/default/objects/NavTask__c/fields/CRM_Comment__c.field-meta.xml
<CustomField>
    <fullName>CRM_Comment__c</fullName>
    <description>Comment from Oppgave API Oppfølging endpoint (See API Service Config - GET_OPPGAVEOPPFOLGING_BY_ID)</description>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>