force-app/main/default/objects/NavTask__c/fields/CRM_GjelderFormula__c.field-meta.xml
<CustomField>
    <fullName>CRM_GjelderFormula__c</fullName>
    <formula>IF(NOT(ISBLANK(NKS_Subtheme__c)),
			NKS_Subtheme__r.Name + IF(NOT(ISBLANK(CRM_Subtype__c)), &apos; - &apos; + CRM_Subtype__r.Name, &apos;&apos;),
			CRM_Subtype__r.Name
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gjelder</label>
    <type>Text</type>
</CustomField>