force-app/main/default/objects/NavTask__c/fields/CRM_Is_Assigned_To_Me__c.field-meta.xml
<CustomField>
    <fullName>CRM_Is_Assigned_To_Me__c</fullName>
    <description>True if the assignee nav ident matches the running user NAV ident.</description>
    <formula>NKS_Assignee__c ==  $User.CRM_NAV_Ident__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Assigned To Me</label>
    <type>Checkbox</type>
</CustomField>