force-app/main/default/objects/NavTask__c/fields/CRM_Subtype__c.field-meta.xml
<CustomField>
    <fullName>CRM_Subtype__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subtype</label>
    <referenceTo>Common_Code__c</referenceTo>
    <relationshipLabel>NAV Tasks (Subtype)</relationshipLabel>
    <relationshipName>NAV_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>