force-app/main/default/objects/NavTask__c/fields/NKS_Subtheme__c.field-meta.xml
<CustomField>
    <fullName>NKS_Subtheme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Subtheme for the task.</description>
    <label>Subtheme</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.NKS_Theme__c</field>
            <operation>equals</operation>
            <valueField>Common_Code__c.CRM_Parent_Code__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Common_Code__c</referenceTo>
    <relationshipLabel>NAV Tasks (Subtheme)</relationshipLabel>
    <relationshipName>Subtheme_NavTasks</relationshipName>
    <type>Lookup</type>
</CustomField>