force-app/main/default/objects/NavTask__c/fields/NKS_Task_Type__c.field-meta.xml
<CustomField>
    <fullName>NKS_Task_Type__c</fullName>
    <description>Task type with API values from kodeverk.</description>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VURD_HENV</fullName>
                <default>true</default>
                <label>Vurder henvendelse</label>
            </value>
            <value>
                <fullName>KONT_BRUK</fullName>
                <label>Kontakt bruker</label>
            </value>
            <value>
                <fullName>VUR_KONS_YTE</fullName>
                <label>Vurder konsekvens av ytelse</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>